[gd_scene load_steps=2 format=3 uid="uid://b8q4i7rm3qc10"]

[ext_resource type="Script" uid="uid://eduxb0mem53u" path="res://gameobjects/flower_sprite.gd" id="1_ny8a4"]

[node name="FlowerSprite" type="Node2D"]
script = ExtResource("1_ny8a4")

[node name="Petals" type="Polygon2D" parent="."]
visible = false
scale = Vector2(0.99033, -0.995123)
color = Color(0.995572, 0.995572, 0.995572, 1)
polygon = PackedVector2Array(0, 32.1568, -8.07812, 8.03921, -32.3125, 0, -8.07812, -8.03921, 0, -32.1568, 8.07812, -8.03921, 32.3125, 0, 8.07812, 8.03921)

[node name="ExtraPetals" type="Polygon2D" parent="."]
visible = false
rotation = 0.785398
scale = Vector2(0.99033, -0.995123)
color = Color(0.995572, 0.995572, 0.995572, 1)
polygon = PackedVector2Array(0, 32.1568, -8.07812, 8.03921, -32.3125, 0, -8.07812, -8.03921, 0, -32.1568, 8.07812, -8.03921, 32.3125, 0, 8.07812, 8.03921)

[node name="Petals2" type="Polygon2D" parent="."]
scale = Vector2(0.99033, -0.995123)
color = Color(0.995572, 0.995572, 0.995572, 1)
polygon = PackedVector2Array(0, 32.1568, -8.07812, 28.1372, -2.01953, 8.03921, -8.07812, 2.0098, -28.2734, 8.03921, -32.3125, 0, -28.2734, -8.03921, -8.07812, -2.0098, -2.01953, -6.0294, -8.07812, -28.1372, 0, -32.1568, 8.07812, -28.1372, 2.01953, -6.0294, 8.07812, -2.0098, 28.2734, -8.03921, 32.3125, 0, 28.2734, 8.03921, 8.07812, 2.0098, 2.01953, 8.03921, 8.07812, 28.1372)

[node name="ExtraPetals2" type="Polygon2D" parent="."]
rotation = 0.785398
scale = Vector2(0.99033, -0.995123)
color = Color(0.995572, 0.995572, 0.995572, 1)
polygon = PackedVector2Array(0, 32.1568, -8.07812, 28.1372, -2.01953, 8.03921, -8.07812, 2.0098, -28.2734, 8.03921, -32.3125, 0, -28.2734, -8.03921, -8.07812, -2.0098, -2.01953, -6.0294, -8.07812, -28.1372, 0, -32.1568, 8.07812, -28.1372, 2.01953, -6.0294, 8.07812, -2.0098, 28.2734, -8.03921, 32.3125, 0, 28.2734, 8.03921, 8.07812, 2.0098, 2.01953, 8.03921, 8.07812, 28.1372)

[node name="Pollen" type="Polygon2D" parent="."]
color = Color(1, 0.8127, 0.401352, 1)
polygon = PackedVector2Array(0, -7, -4, -5, -6, -1, -4, 3, 0, 5, 4, 3, 6, 0, 4, -5)
